--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-magic-grid": "^0.0.4",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
