--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.11.1",
+    "framer-motion": "^2.6.15",
     "gatsby": "^2.24.61",
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-styled-components": "^3.3.11",
